<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recordMainNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center"
            tools:text="osakdoaskdpaoskdpasokdpa.3gp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@color/colorGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/leftSpeakerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/left_speaker" />

                <TextView
                    android:id="@+id/leftSpeakerDecibelsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/leftSpeakerTextView"
                    tools:text="35db" />

                <ImageButton
                    android:id="@+id/leftPlayButton"
                    style="@style/PlayButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_below="@+id/leftSpeakerTextView"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp" />

                <Button
                    android:id="@+id/leftRemoveButton"
                    style="@style/RemoveButton"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/leftSpeakerTextView"
                    android:layout_margin="6dp"
                    android:layout_toEndOf="@id/leftPlayButton"
                    android:text="@string/remove" />

            </RelativeLayout>


            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@color/colorGrey" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/rightSpeakerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/right_speaker" />

                <TextView
                    android:id="@+id/rightSpeakerDecibelsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/rightSpeakerTextView"
                    tools:text="35db" />

                <ImageButton
                    android:id="@+id/rightPlayButton"
                    style="@style/PlayButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_below="@id/rightSpeakerTextView"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp" />

                <Button
                    android:id="@+id/rightRemoveButton"
                    style="@style/RemoveButton"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/rightSpeakerTextView"
                    android:layout_margin="6dp"
                    android:layout_toEndOf="@id/rightPlayButton"
                    android:text="@string/remove" />
            </RelativeLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:src="@color/colorGrey" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/speakersStateImageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:src="@drawable/ic_done" />

            <TextView
                android:id="@+id/setUpSpeakersStatementTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="@string/well_set_speakers" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>