<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recording.RecordingFragment">

    <LinearLayout
        android:id="@+id/fileNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/recordNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/record_name"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/recordNameEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textColor="@color/colorGrey"
            android:textSize="15sp" />
    </LinearLayout>

    <include
        android:id="@+id/leftRecordingLayout"
        layout="@layout/recording_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fileNameLayout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp" />

    <include
        android:id="@+id/rightRecordingLayout"
        layout="@layout/recording_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fileNameLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp" />

    <TextView
        android:id="@+id/actionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rightRecordingLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="16sp"
        tools:text="recording" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionTextView"
        android:gravity="center"
        android:text="@string/start_time"
        android:textSize="32sp" />

    <LinearLayout
        android:id="@+id/decibelsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timerTextView"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.ntt.customgaugeview.library.GaugeView
            android:id="@+id/gaugeView"
            android:layout_width="178dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:divisions="8"
            app:innerCircleColor="@color/colorLightBlue"
            app:outerCircleColor="@color/colorRed"
            app:rangeValues="@array/decibelsRangeValues"
            app:scaleEndValue="100"
            app:showInnerRim="false"
            app:showNeedle="true"
            app:showOuterBorder="false"
            app:showOuterRim="true"
            app:showOuterShadow="false"
            app:showRangeText="true"
            app:showRanges="true"
            app:showScale="true"
            app:subdivisions="1"
            app:textUnit="[dB]"
            app:textUnitColor="@color/colorPrimaryDark"
            app:textUnitSize="0.06"
            app:textValueSize="0.15" />

        <TextView
            android:id="@+id/decibelsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            tools:text="55 [dB]" />

        <TextView
            android:id="@+id/dBInterpretationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:text="Perfect distance!" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignEnd="@+id/decibelsLayout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/optimize" />

        <ImageButton
            android:id="@+id/increaseDecibelsButton"
            style="@style/OptionButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/ic_add" />

        <ImageButton
            android:id="@+id/lowerDecibelsButton"
            style="@style/OptionButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/ic_remove" />
    </LinearLayout>
</RelativeLayout>